Replace format with formatted